# halobeasiswa_backend

./: .gitignore  README.md  pyproject.toml  test.http
.github/workflows/: django.yml  master_halobeasiswa-be.yml  master_halobeasiswa.yml
backend/: settings.py  urls.py
backend/settings/: base.py  local.py  prod.py
countries_app/: admin.py  models.py  tests.py  wagtail_hooks.py
countries_app/api/: serializers.py  urls.py  views.py
countries_app/migrations/: 0001_initial.py
dashboard/templates/wagtailadmin/: 404.html  admin_base.html  base.html  home.html  login.html
events_app/: models.py  wagtail_hooks.py
events_app/api/: serializers.py  urls.py  views.py
events_app/migrations/: 0001_initial.py  0002_alter_events_name.py  0002_alter_events_picture.py  0002_events_instagram_feed_link.py  0003_alter_events_picture.py  0003_events_date.py  0004_alter_events_description.py
static/: staticfiles.json
user_profile/: models.py
user_profile/api/: serializers.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py  0002_remove_profile_id_alter_profile_user.py  0003_profile_id_alter_profile_user.py  0004_remove_profile_profile_picture.py
